--- a/public/app/modules/layouts/side-nav/sidenav.html
+++ b/public/app/modules/layouts/side-nav/sidenav.html
@@ -18,7 +18,7 @@
     <p> {{ item.name }}</p>
   </md-list-item>
   <md-divider></md-divider>
-  <md-subheader ng-show="vm.user">Admin</md-subheader>
+  <!-- <md-subheader ng-show="vm.user">Admin</md-subheader> -->
   <md-list-item ng-repeat="item in vm.admin" ng-click="vm.showSettingsBottom($event)">
     <div class="inset">
       <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
