integrating auth and signup, added better sign up handling

--- a/public/app/modules/layouts/side-nav/sidenav.html
+++ b/public/app/modules/layouts/side-nav/sidenav.html
@@ -11,7 +11,7 @@
   </div>
 </md-toolbar>
 <md-list>
-  <md-list-item ng-repeat="item in vm.menu" ng-click="vm.navigateTo(item.link)">
+  <md-list-item ng-if="" ng-repeat="item in vm.menu" ng-click="vm.navigateTo(item.link)">
     <div class="inset" ng-show="item.icon">
       <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
     </div>
