--- a/public/app/modules/layouts/side-nav/sidenav.html
+++ b/public/app/modules/layouts/side-nav/sidenav.html
@@ -1,13 +1,13 @@
 <md-toolbar class="md-tall md-hue-2">
   <div layout="column" class="md-toolbar-tools-bottom inset">
-    <div layout="row">
+    <!-- <div layout="row">
       <div flex="20">
     
       </div>
       <div flex="80" style="margin-top: 10px;font-size: 1em;">
         <div>Fernando Monteiro</div>
       </div>
-    </div>
+    </div> -->
   </div>
 </md-toolbar>
 <md-list>
@@ -15,7 +15,7 @@
     <div class="inset" ng-show="item.icon">
       <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
     </div>
-    <p> {{ item.name }}</p>
+    <p ng-show="vm.loggedIn === true"> {{ item.name }}</p>
   </md-list-item>
   <md-divider></md-divider>
   <md-subheader ng-show="vm.user">Admin</md-subheader>
